--- a/templates/home.html
+++ b/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
   <div class="home-hero">
-    <h1>Welcome to job search App</h1>
-    <h4>Sign up now to get your dream job!</h4>
+    <h1 class="display-1">Job search App</h1>
+    <h4 class="display-5">Sign up to find your perfect job!</h4>
     
     <a href="/signup" class="btn btn-primary mt-5">Sign up</a>
   </div>
