--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
 
   <div class="row justify-content-md-center">
     <div class="col-md-7 col-lg-5">
-      <h2 class="join-message mr-4">Welcome back</h2>
+      <h3 class="join-message mr-4">Welcome back</h3>
 
       <form method="POST" id="user_form">
         {{ form.hidden_tag() }}
@@ -18,7 +18,7 @@
           {{ field(placeholder=field.label.text, class="form-control")}} 
         {% endfor %}
 
-        <button class="btn btn-primary btn-block btn-lg">Log in</button>
+        <button class="btn btn-primary btn-lg" id="loginBtn">Log in</button>
       </form>
     </div>
   </div>
