--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,8 +1,6 @@
 
 {% extends 'base.html' %}
 
-{% block body_class %}onboarding{% endblock %}
-
 {% block content %}
 
 <div class="row justify-content-md-center">
@@ -18,7 +16,7 @@
         {{ field(placeholder=field.label.text, class="form-control") }}
       {% endfor %}
 
-      <button class="btn btn-primary btn-lg btn-block">Sign up!</button>
+      <button class="btn btn-primary btn-lg" id="loginBtn">Sign up!</button>
     </form>
   </div>
 </div>
