--- a/templates/add_job.html
+++ b/templates/add_job.html
@@ -13,7 +13,7 @@
           {{ field(placeholder=field.label.text, class="form-control") }}                  
         {% endfor %}     
               
-        <button type="submit" class="btn btn-primary mb-2">post New Job</button>
+        <button type="submit" class="btn btn-primary" style="margin-left: 300px;">Post New Job</button>
     </form>   
 
     
