--- a/templates/base.html
+++ b/templates/base.html
@@ -4,16 +4,20 @@
 <head>
   <meta charset="UTF-8">
   <title>JobsSearch</title>
-
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" />
   <link rel="stylesheet"
         href="https://unpkg.com/bootstrap/dist/css/bootstrap.css">
   <script src="https://unpkg.com/jquery"></script>
   <script src="https://unpkg.com/popper"></script>
   <script src="https://unpkg.com/bootstrap"></script>
-
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+         integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" 
+         crossorigin="anonymous"/>
+         
   <link rel="stylesheet"
         href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" href="/static/style.css">
+  <link rel="stylesheet" href="/static/profile.css">
   
   
 </head>
@@ -37,7 +41,10 @@
       </li>
       <li>
         <a href="/users/{{g.user.id}}/jobs/add"> Post new Job</a>
-      </li>      
+      </li>  
+      <li>
+        <a href="//users/{{g.user.id}}/favorites"> Favorite Jobs</a>
+      </li>     
       <li>
         <a href="/users/{{g.user.id}}">
             {{ g.user.username }}
@@ -62,5 +69,6 @@
 </body>
 
 <script src="https://unpkg.com/axios/dist/axios.js"></script>
+<script src="/static/app.js"></script>
 
 </html>
