--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,11 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="row justify-content-md-center">
   <div class="home-hero">
     <h1 class="display-1">Job search App</h1>
     <h4 class="display-5">Sign up to find your perfect job!</h4>
     
-    <a href="/signup" class="btn btn-primary mt-5">Sign up</a>
+    <a href="/signup" class="btn btn-primary mt-5" id="sign">Sign up</a>
   </div>
+</div>  
 {% endblock %}
