--- a/templates/search.html
+++ b/templates/search.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
 
-
+  <h1 class="display-3",>Search desierd job </h1>
     
-    <form method="POST" action="api/search-job" id="search-form">
+    <form method="POST" action="users/search-job" id="search-form">
         {{ form.hidden_tag() }}
          
         {% for field in form if field.widget.input_type != 'hidden' %}
@@ -13,18 +13,22 @@
           {{ field(placeholder=field.label.text, class="form-control") }}                  
         {% endfor %}     
               
-        <button type="submit" class="btn btn-primary mb-2">Find Job</button>
+        <button type="submit" class="btn btn-primary " style="margin-left: 300px;">Find Job</button>
     </form>   
-
-    <div class="result"> 
+ 
+    <div class="result">       
       {% for result in results %} 
-      <div class="card mt-2">
+      <div class="card mt-2" style="width: 75rem;">
         <div class="card-body">
-        <h4 class="card-title"><a href="{{ result.redirect_url }}" id="remove-tag" style="color: blueviolet;" target="_blank"> {{ result.title }}</a></h4>
-        <h5>{{ result.location.display_name }}</h5>
+        <h4 class="card-title">{{ result.title }}</h4>
+        <h5 class="card-subtitle mb-2 text-muted">{{ result.location.display_name }}</h5>
         <h5>{{ result.company.display_name }}</h5>
-        <p class="card-text">{{ result.description }}</p>
-        <p>{{ result.created }}</p>
+        <p class="card-text">{{ result.description }}</p>        
+        <h5>
+          <a data-id="{{result.id}}" href="/users/favorites" class="card-link favorites">Save Favorite Jobs</a>
+          <a href="{{ result.redirect_url }}" class="redirect" target="_blank">View/Apply</a>          
+        </h5>
+        <span style="font-size: small;">{{ result.created }}</span>
         
         </div>
       </div>
