--- a/templates/login.html
+++ b/templates/login.html
@@ -6,9 +6,9 @@
 
   <div class="row justify-content-md-center">
     <div class="col-md-4 col-lg-5">
-      <h3 class="join-message mr-4">Welcome back</h3>
+      <h3> Welcom! </h3>
 
-      <form method="POST" id="user_form">
+      <form method="POST" id="search-form">
         {{ form.hidden_tag() }}
 
         {% for field in form if field.widget.input_type != 'hidden' %}
