--- a/templates/edit_job.html
+++ b/templates/edit_job.html
@@ -3,7 +3,7 @@
 
 
     
-    <form id="search-form">
+    <form method="POST" id="search-form">
         {{ form.hidden_tag() }}
          
         {% for field in form if field.widget.input_type != 'hidden' %}
@@ -13,12 +13,8 @@
           {{ field(placeholder=field.label.text, class="form-control") }}                  
         {% endfor %}     
               
-        <button class="btn btn-primary"
-          formmethod="GET"
-          formaction="/users/{{ job.user_id }}">Cancel</button>
-        <button class="btn btn-primary"
-          formmethod="GET"
-          formaction="/users/{{ job.user_id }}">Save Update</button>
+        <button class="btn btn-primary">Cancel</button>
+        <button class="btn btn-primary">Save Update</button>
         
     </form>   
 
