--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -5,7 +5,7 @@
 <div class="row justify-content-md-center">
   <div class="col-md-7 col-lg-5">
     <h2 class="join-message">Edit Account</h2>
-    <form id="user_form">
+    <form method="POST" id="search-form" >
       {{ form.hidden_tag() }}
 
       {% for field in form if field.widget.input_type != 'hidden' %}
@@ -15,10 +15,13 @@
         {{ field(placeholder=field.label.text, class="form-control") }}
       {% endfor %}
 
-      <button class="btn btn-primary btn-lg" id="loginBtn">Save Update</button>
-      <button class="btn btn-primary btn-lg" id="loginBtn">Cancel Update</button>
+      <button class="btn btn-primary">Save</button>
+      <button class="btn btn-primary">Cancel</button>
     </form>
   </div>
 </div>
+
+
+
 
 {% endblock %}
