--- a/templates/signup.html
+++ b/templates/signup.html
@@ -6,7 +6,7 @@
 <div class="row justify-content-md-center">
   <div class="col-md-7 col-lg-5">
     <h2 class="join-message">Create Account</h2>
-    <form method="POST" id="user_form">
+    <form method="POST" id="search-form">
       {{ form.hidden_tag() }}
 
       {% for field in form if field.widget.input_type != 'hidden' %}
