--- a/templates/edit_profile.html
+++ b/templates/edit_profile.html
@@ -13,8 +13,8 @@
         {{ field(placeholder=field.label.text, class="form-control") }}
       {% endfor %}
 
-      <button class="btn btn-primary">Save</button>
-      <button class="btn btn-primary">Cancel</button>
+      <button id="edit-acc" class="btn btn-primary">Save</button>
+      <button  id="edit-acc" class="btn btn-primary">Cancel</button>
     </form>
 
 
