--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1>Search desierd job</h1>
+  <h1>Search desired job</h1>
     
     <form method="POST" action="users/search" id="search-form">
         {{ form.hidden_tag() }}
@@ -13,27 +13,8 @@
           {{ field(placeholder=field.label.text, class="form-control") }}                  
         {% endfor %}     
               
-        <button type="submit" class="btn btn-primary " style="margin-left: 300px;">Find Job</button>
+        <button type="submit" class="btn btn-primary" id="find-job" style="margin-left: 300px;">Find Job</button>
     </form>   
  
-    <div class="result">       
-      {% for result in results %} 
-      <div class="card mt-2">
-        <div class="card-body">
-        <h4 class="card-title">{{ result.title }}</h4>
-        <h5 class="card-subtitle mb-2 text-muted">{{ result.location.display_name }}</h5>
-        <h5>{{ result.company.display_name }}</h5>
-        <p class="card-text">{{ result.description }}</p>        
-        <h5>
-          <a data-id="{{result.id}}" href="/users/{{user.id}}/favorites" class="card-link favorites">Save Favorite Jobs</a>
-          <a href="{{ result.redirect_url }}" class="redirect" target="_blank">View/Apply</a>          
-        </h5>
-        <span style="font-size: small;">{{ result.created }}</span>
-        
-        </div>
-      </div>
-      {% endfor %}
-    </div>
-
-
+    
 {% endblock %}
