--- a/templates/favorites.html
+++ b/templates/favorites.html
@@ -2,7 +2,7 @@
 {%block title%} Favorite Jobs List {% endblock %} 
 {% block content %}
 
-<h1>Favorite Jobs List</h1>     
+<h1 class="h1">Favorite Jobs List</h1>     
     <div class="card mt-2" style="width: 75rem;">
       <div class="card-body fav-jobs-list">      
       
