--- a/templates/search.html
+++ b/templates/search.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1>Search desired job</h1>
+  <h1 class="h1">Search desired job</h1>
     
     <form method="POST" action="users/search" id="search-form">
         {{ form.hidden_tag() }}
