--- a/static/style.css
+++ b/static/style.css
@@ -294,6 +294,12 @@ a {
   background: rgba(255, 255, 255, 0.3);
 }
 
+.h1 {  
+    font-size: 250%;
+    font-family: 'Playfair Display', serif;
+    color: #3e403f;    
+}
+
 
 
 
