--- a/templates/add_job.html
+++ b/templates/add_job.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-  <h1>Post New Job</h1>
+  <h1 class="h1">Post New Job</h1>
     
     <form method="POST" id="search-form">
         {{ form.hidden_tag() }}
