--- a/templates/base.html
+++ b/templates/base.html
@@ -28,7 +28,7 @@
     <div class="navbar-header">
       <a href="/" class="navbar-brand"> 
         <img src="/static/img/job.jpg" alt="logo">      
-        <span>Search Web APP</span>
+        <span class="finder">Finder</span>
       </a>
     </div>
     <ul class="nav navbar-nav navbar-center">
