--- a/static/style.css
+++ b/static/style.css
@@ -29,7 +29,7 @@ body.error-404 {
 .finder {
   font-family: fantasy;
   font-size: 25px;  
-  color: crimson;
+  color: rgba(247, 16, 74, 0.815);
 }
 
 
